# Resume-Grill

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  START_WINDOWS.bat  Windows系统点我.bat  app.py  pyproject.toml  requirements.txt  启动_Linux_macOS.sh  故障排查.md  鍙€塤瀹夎鏈湴妯″瀷.md  闅愮璇存槑.md
.github/workflows/: tests.yml
.streamlit/: config.toml
examples/: sample_resume.txt  示例_审计数据.json
resume_grill/: __init__.py  audit.py  cli.py  llm.py  models.py  parser.py  pdf_report.py  repo_audit.py
scripts/: find_free_port.py  start_macos_linux.sh
tests/: test_audit.py
